internal/ast/testdata/tests/errors/contracts/no_end_bracket.rql
contract NoEnd() -> void {
    x = (a() / 2
}
